Signup done, Token verify done, now JWT till now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=reddit
-
+# spring.main.allow-bean-definition-overriding=true
+# spring.main.allow-circular-references=true
 
 ##################### DATABASE PROPERTIES ####################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +11,26 @@ spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
+
+##################### DATABASE PROPERTIES ####################
+
+
+##################### EMAIL PROPERTIES ####################
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=2d6531810fad36
+spring.mail.password=5e7894479e407f
+
+##################### EMAIL PROPERTIES ####################
+
+
+############ JWT Properties #####################
+# jwt.expiration.time=900000
+# jwt.public.key="="
+# ## This is strictly for demo purpose only,
+# # DO NOT define the private key in the repository like this in your personal projects
+# jwt.private.key="="
+# server.port=8080
+############ JWT Properties #####################
